--- a/murder/views/dashboard.pug
+++ b/murder/views/dashboard.pug
@@ -6,6 +6,7 @@ html(lang="de")
         link(rel="stylesheet" href="components/angular-material/angular-material.min.css")
         link(rel="stylesheet" href="components/material-design-icons/iconfont/material-icons.css")
         link(rel="stylesheet" href="css/common.css")
+        title MURDER | Dashboard
         style.
             @import url(https://fonts.googleapis.com/css?family=Merriweather:700);
 
