--- a/murder/views/index.pug
+++ b/murder/views/index.pug
@@ -8,6 +8,7 @@ html(lang="de")
         link(rel="stylesheet" href="components/material-design-icons/iconfont/material-icons.css")
         link(rel="stylesheet" href="css/index.css")
         link(rel="stylesheet" href="css/common.css")
+        title MURDER | Login
 
     body.unselectable(ng-app='murder' ng-cloak style="height: 100%")
         div(ng-controller='indexController', md-theme='{{theme}}', md-theme-watch='true', )
