--- a/murder/views/register.pug
+++ b/murder/views/register.pug
@@ -7,6 +7,7 @@ html(lang="de")
         link(rel="stylesheet" href="components/angular-material/angular-material.min.css")
         link(rel="stylesheet" href="components/material-design-icons/iconfont/material-icons.css")
         link(rel="stylesheet" href="css/common.css")
+        title MURDER | Register
 
     body.unselectable(ng-app='murder' ng-cloak style="height: 100%")
         div(ng-controller='regController', md-theme='{{theme}}', md-theme-watch='true', )
