--- a/murder/views/dashboard.pug
+++ b/murder/views/dashboard.pug
@@ -6,6 +6,19 @@ html(lang="de")
         link(rel="stylesheet" href="components/angular-material/angular-material.min.css")
         link(rel="stylesheet" href="components/material-design-icons/iconfont/material-icons.css")
         link(rel="stylesheet" href="css/common.css")
+
+        link(rel="apple-touch-icon", sizes="180x180", href="/favicons/apple-touch-icon.png")
+        link(rel="icon", type="image/png", sizes="32x32", href="/favicons/favicon-32x32.png")
+        link(rel="icon", type="image/png", sizes="192x192", href="/favicons/android-chrome-192x192.png")
+        link(rel="icon", type="image/png", sizes="16x16", href="/favicons/favicon-16x16.png")
+        link(rel="manifest", href="/favicons/manifest.json")
+        link(rel="mask-icon", href="/favicons/safari-pinned-tab.svg", color="#ff0000")
+        link(rel="shortcut icon", href="/favicons/favicon.ico")
+        meta(name="msapplication-TileColor", content="#b91d47")
+        meta(name="msapplication-TileImage", content="/favicons/mstile-144x144.png")
+        meta(name="msapplication-config", content="/favicons/browserconfig.xml")
+        meta(name="theme-color", content="#ffffff")
+
         title MURDER | Dashboard
         style.
             @import url(https://fonts.googleapis.com/css?family=Merriweather:700);
@@ -75,4 +88,6 @@ html(lang="de")
     script(src="components/js-sha512/build/sha512.min.js")
     script(src="js/injectScript.js")
     script(src="js/dash.js")
+    script.
+        var strokeStyle = '#69F0AE';
     script(src="js/canvas.js")
