--- a/murder/views/index.pug
+++ b/murder/views/index.pug
@@ -8,6 +8,19 @@ html(lang="de")
         link(rel="stylesheet" href="components/material-design-icons/iconfont/material-icons.css")
         link(rel="stylesheet" href="css/index.css")
         link(rel="stylesheet" href="css/common.css")
+
+        link(rel="apple-touch-icon", sizes="180x180", href="/favicons/apple-touch-icon.png")
+        link(rel="icon", type="image/png", sizes="32x32", href="/favicons/favicon-32x32.png")
+        link(rel="icon", type="image/png", sizes="192x192", href="/favicons/android-chrome-192x192.png")
+        link(rel="icon", type="image/png", sizes="16x16", href="/favicons/favicon-16x16.png")
+        link(rel="manifest", href="/favicons/manifest.json")
+        link(rel="mask-icon", href="/favicons/safari-pinned-tab.svg", color="#ff0000")
+        link(rel="shortcut icon", href="/favicons/favicon.ico")
+        meta(name="msapplication-TileColor", content="#b91d47")
+        meta(name="msapplication-TileImage", content="/favicons/mstile-144x144.png")
+        meta(name="msapplication-config", content="/favicons/browserconfig.xml")
+        meta(name="theme-color", content="#ffffff")
+
         title MURDER | Login
 
     body.unselectable(ng-app='murder' ng-cloak style="height: 100%")
