--- a/murder/views/gameDashboard.pug
+++ b/murder/views/gameDashboard.pug
@@ -107,6 +107,8 @@ html(lang="de")
                                             td.md-cell
                                                 md-button.md-icon-button(ng-click='openInfo(dessert.id)')
                                                     md-icon info_outline
+                                md-button.md-raised(ng-click='openAllInfo()') View More
+
                 if(user.alive)
                     md-card.normal(style='width: 365px')
                         md-card-content
