--- a/murder/views/index.pug
+++ b/murder/views/index.pug
@@ -23,7 +23,7 @@ html(lang="de")
 
         title MURDER | Login
 
-    body.unselectable(ng-app='murder' ng-cloak style="height: 100%")
+    body.unselectable(ng-app='murder' ng-cloak style="height: 100%; background-color: #424242;")
         div(ng-controller='indexController', md-theme='{{theme}}', md-theme-watch='true', )
             div(layout='column', layout-align='space-around center', class="unselectable")
                 md-toolbar
