--- a/murder/views/finished.pug
+++ b/murder/views/finished.pug
@@ -52,7 +52,9 @@ html(lang="de")
                             h1.noblur(style="font-family: 'luna', serif; font-size: 30px") CONGRATS
 
 
-        canvas
+        if(!mobile)
+            #canvas
+                canvas(style='z-index: -5')
 
 
     script(src="components/angular/angular.min.js")
