--- a/murder/views/gameDashboard.pug
+++ b/murder/views/gameDashboard.pug
@@ -122,8 +122,9 @@ html(lang="de")
                             p You were already killed by #{user.killed_by}
 
 
-        #canvas
-            canvas(style='z-index: -5')
+            if(mobile)
+                #canvas
+                    canvas(style='z-index: -5')
 
 script(src="components/angular/angular.min.js")
 script(src="components/angular-animate/angular-animate.min.js")
