--- a/murder/views/dashboard.pug
+++ b/murder/views/dashboard.pug
@@ -18,6 +18,10 @@ html(lang="de")
         meta(name="msapplication-TileImage", content="/favicons/mstile-144x144.png")
         meta(name="msapplication-config", content="/favicons/browserconfig.xml")
         meta(name="theme-color", content="#ffffff")
+        meta(name='apple-mobile-web-app-title', content='MURDER')
+        meta(name='apple-mobile-web-app-status-bar-style', content='black')
+
+
 
         title MURDER | Dashboard
         style.
