--- a/murder/views/finished.pug
+++ b/murder/views/finished.pug
@@ -20,6 +20,7 @@ html(lang="de")
         meta(name="theme-color", content="#ffffff")
         meta(name='apple-mobile-web-app-title', content='MURDER')
         meta(name='apple-mobile-web-app-status-bar-style', content='black')
+        meta(name='apple-mobile-web-app-capable', content='yes')
 
 
         title MURDER | FINISHED
