--- a/murder/views/register.pug
+++ b/murder/views/register.pug
@@ -22,6 +22,8 @@ html(lang="de")
         meta(name='apple-mobile-web-app-title', content='MURDER')
         meta(name='apple-mobile-web-app-status-bar-style', content='black')
         meta(name='apple-mobile-web-app-capable', content='yes')
+        meta(name='viewport', content='user-scalable=no, width=device-width')
+
 
         title MURDER | Register
 
