i hate this shit

--- a/murder/views/gameDashboard.pug
+++ b/murder/views/gameDashboard.pug
@@ -53,7 +53,7 @@ html(lang="de")
                 visibility: visible;
             }
 
-}body.unselectable(ng-app='murder' ng-cloak style="height: 100%; overflow-x: hidden; background-color: #424242")
+body.unselectable(ng-app='murder' ng-cloak style="height: 100%; overflow-x: hidden; background-color: #424242")
         div(ng-controller='dashigController')
             div(layout='column', layout-align='space-around center', class="unselectable")
                 md-toolbar
